lib/libremidi-5.4.3/tests/corpus/Invalid/No Header Chunk/ozzy02.mid
<ASX version = 3.0>
<entry>
<title>1</title><Ref Href = "mms://r.mm.uol.com.br/radiouol/00/0031/003158-6/003158-6_01_28.asf"/>
</entry>
<entry>
<title>2</title><Ref Href = "mms://r.mm.uol.com.br/radiouol/00/0031/003158-6/003158-6_02_28.asf"/>
</entry>
<entry>
<title>3</title><Ref Href = "mms://r.mm.uol.com.br/radiouol/00/0031/003158-6/003158-6_03_28.asf"/>
</entry>
<entry>
<title>4</title><Ref Href = "mms://r.mm.uol.com.br/radiouol/00/0031/003158-6/003158-6_04_28.asf"/>
</entry>
<entry>
<title>5</title><Ref Href = "mms://r.mm.uol.com.br/radiouol/00/0031/003158-6/003158-6_05_28.asf"/>
</entry>
<entry>
<title>6</title><Ref Href = "mms://r.mm.uol.com.br/radiouol/00/0031/003158-6/003158-6_06_28.asf"/>
</entry>
<entry>
<title>7</title><Ref Href = "mms://r.mm.uol.com.br/radiouol/00/0031/003158-6/003158-6_07_28.asf"/>
</entry>
<entry>
<title>8</title><Ref Href = "mms://r.mm.uol.com.br/radiouol/00/0031/003158-6/003158-6_08_28.asf"/>
</entry>
<entry>
<title>9</title><Ref Href = "mms://r.mm.uol.com.br/radiouol/00/0031/003158-6/003158-6_09_28.asf"/>
</entry>
<entry>
<title>10</title><Ref Href = "mms://r.mm.uol.com.br/radiouol/00/0031/003158-6/003158-6_10_28.asf"/>
</entry>
<entry>
<title>11</title><Ref Href = "mms://r.mm.uol.com.br/radiouol/00/0031/003158-6/003158-6_11_28.asf"/>
</entry>
</ASX>

